Add Grafana link

--- a/settings-svc/index.html
+++ b/settings-svc/index.html
@@ -185,7 +185,7 @@ Supports feature switches and rollout schedules for multiple models, such as on/
 <ul><li>Ruby client in future release</li></ul>
 </li>
 <li>Application server caching (Memcached) and client application caching (EhCache)</li>
-<li>Monitoring with StatsD and Grafana Dashboard</li>
+<li>Monitoring with StatsD and <a href="http://grafana.ctct.net/#/dashboard/elasticsearch/Setting%20Service%20Production">Grafana Dashboard</a></li>
 
 </p>
 </section>
