--- a/static-apps/index.html
+++ b/static-apps/index.html
@@ -56,7 +56,7 @@
 					<p>
 <ul>
 <li>Pattern for building interactive applications</li>
-<li>First used in the coupon campaign</li>
+<li>First used in the Coupon campaign</li>
 <li>Campaign export and campaign import built this way</li>
 <li>Starting to be used in Galileo email flow, My Library and Campaign Automation</li>
 </ul>
@@ -82,7 +82,7 @@
 <section>
 <h2>Front End</h2>
 <ul>
-<li>Built using tools familiar to front-end developers
+<li>Built using tools familiar to front-end developers, e.g.:
 <ul>
 <li>Grunt, NPM, Jasmine</li>
 </ul>
@@ -109,7 +109,9 @@
 <section>
 <h2>Host: Generic Page</h2>
 <ul>
-    <li>Looks up current version for this app/page</li>
+    <li>Looks up current version for this app/page<br>
+<pre>https://campaign-ui.constantcontact.com/pages/campaign/:app_id/:page_id</pre></li>
+    </li>
     <li>Injects references to corresponding static assets</li>
     <li>Includes common generic info/infrastructure, e.g.:
     <ul>
@@ -121,35 +123,24 @@
     <ul>
         <li>Dev: can use local assets</li>
 	<li>Pipeline/QE: can test new version before it's released</li>
-	<li>currently disallowed in prod</li>
+	<li>Currently disallowed in prod</li>
     </ul>
     
     </li>
 </ul>
+
 </section>
-
-<section>
-<h2>Phase 3 Example</h2>
-<p>
-<pre>
-<code data-trim contenteditable>
-{   "application_id"          : "my-app",
-    "feature_description"     : "phase 3 - on for 20% all accounts ",
-    "feature_name"            : "Cool new feature",
-    "feature_selectorlist"    :  
-    [
-        {   "selector_type"   : "accountpercentage",
-            "selector_value"  : "20"        
-        }
-   
-    ]     
-}
-
-</code>
-</pre>
-</p>
+<h2>Future: Generic Host App</h2>
+<ul>
+    <li>New app with generic page and Ajax API support</li>
+    <li>Puppet-pushed files instead of settings-svc to describe versions/assets
+    <ul>
+        <li>No redeploy; like DistUI roster or feature switch descriptors</li>
+	<li>Release step for an app would involve checking new version info into this repo</li>
+    </ul>
+    </li>
+</ul>
 </section>
-
 
 				<section>
 					<h1>THE END</h1>
