Fix bug, add goals

--- a/static-apps/index.html
+++ b/static-apps/index.html
@@ -61,6 +61,15 @@
 <li>Starting to be used in Galileo email flow, My Library and Campaign Automation</li>
 </ul>
                                 </section>
+				<section>
+					<h2>Goals</h2>
+					<p>
+<ul>
+<li>Improve velocity</li>
+<li>Better/easier testing</li>
+<li>Appconnect/mobile reuse of app business logic</li>
+</ul>
+</section>
 
 				<section>
 					<h2>Basic Structure</h2>
@@ -128,8 +137,9 @@
     
     </li>
 </ul>
-
 </section>
+
+<section>
 <h2>Future: Generic Host App</h2>
 <ul>
     <li>New app with generic page and Ajax API support</li>
