--- a/static-apps/index.html
+++ b/static-apps/index.html
@@ -75,11 +75,11 @@
 					<h2>Basic Structure</h2>
 					<p>
 <ul>
-<li>Separate front end and Ajax layers</li>
+<li>Separate front end and host app</li>
 <li>Front end: collection of versioned static assets published directly to CDN (via SOContent)</li>
 <li>Host app: 
 <ul>
-<li>Ajax API: pass-through to domain/platform services</li>
+<li>Ajax API: REST-ful, JSON in/out, pass-through</li>
 <li>Generic page: shell page that loads assets for specified page</li>
 </ul>
 </ul>
