--- a/static-apps/index.html
+++ b/static-apps/index.html
@@ -108,7 +108,7 @@
 <ul>
     <li>Pass-through to domain / platform services</li>
     <li>No business logic</li>
-    <li>Generic support for Ajax exposure<li>
+    <li>Generic support for Ajax exposure
     <ul>
     <li>Authentication (SSO), authorization (Shiro)</li><li>anti-SAMY, CSRF protection</li><li>caching (if needed)</li>
     </ul></li>
