--- a/static-apps/index.html
+++ b/static-apps/index.html
@@ -149,6 +149,13 @@
 	<li>Release step for an app would involve checking new version info into this repo</li>
     </ul>
     </li>
+    <li>
+        Questions:
+	<ul>
+	    <li>Relationship to Appconnect v3?</li>
+	    <li>Third-party extensibility?</li>
+	</ul>
+    </li>
 </ul>
 </section>
 
